--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -35,6 +35,13 @@ a {
   box-shadow: 0;
   padding: 5px;
   font-weight: bold;
+  cursor: pointer;
+  transition: ease-in-out 2ms;
+
+  &:hover{
+    background-color:rgb(28, 131, 28) ;
+  }
+  
 }
 
 .unblock_btn{
@@ -46,4 +53,8 @@ a {
   box-shadow: 0;
   padding: 5px;
   font-weight: bold;
+  cursor: pointer;
+  &:hover{
+    background-color:rgb(173, 0, 0) ;
+  }
 }
